# cryptominisat

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis-cmake.sh  .travis.yml  .vimsettings.vim  AUTHORS  CLAUDE.md  CMakeLists.txt  Changes.xlsx  Dockerfile  Dockerfile.web  Doxyfile  HOWTO_MinGW32  HOWTO_OSX  HOWTO_VisualCpp  HOWTO_speedtest  INSTALL  LICENSE  LICENSE-CPOL.html  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  Makefile.am  Makefile.cvs  NEWS  README  README.markdown  README.md  README.rst  README_VERIFIER.md  TODO  appveyor.yml  build.sh  clean.sh  cmsat_mysql_setup.sh  cmsat_mysql_setup.txt  (+16 more)
SatELite/: CMakeLists.txt  Makefile.am
SatELite/SatELite/: BcnfWriter.iC  Heap.h  Main.C  Main_debug.C  Profile.h  Solver.C  Solver.h  Solver_subsume.C  VarOrder.h
SatElite/: CMakeLists.txt  Makefile.am
SatElite/SatELite/: Main.C  Main.h  Profile.C  Queue.h  Solver.C  Solver.h  SolverTypes.h  Solver_clause.iC  Solver_debug.C  Solver_subsume.C  TmpFiles.C  TmpFiles.h
Solver/: BitArray.h  BothCache.cpp  BothCache.h  BothProp.cpp  BothProp.h  BoundedQueue.h  CMakeLists.txt  CSet.h  CalcDefPolars.cpp  CalcDefPolars.h  Clause.cpp  Clause.h  ClauseAllocator.cpp  ClauseAllocator.h  ClauseCleaner.cpp  ClauseCleaner.h  ClauseDumper.cpp  ClauseDumper.h  ClauseOffset.h  ClauseVivifier.cpp  ClauseVivifier.h  CommandControl.cpp  CommandControl.h  CompleteDetachReattacher.cpp  CompleteDetachReattacher.h  ConflGraphCreator.cpp  Conglomerate.cpp  Conglomerate.h  DataSync.cpp  DataSync.h  DataSyncServer.cpp  DimacsParser.cpp  DimacsParser.h  DoublePackedRow.h  FailedLitSearcher.cpp  FailedLitSearcher.h  FailedVarSearcher.cpp  FailedVarSearcher.h  FindUndef.cpp  FindUndef.h  (+105 more)
cmsat/: Alg.h  BasicHeap.h  BitArray.h  BothCache.cpp  BothCache.h  BoundedQueue.h  CMakeLists.txt  CSet.h  CalcDefPolars.cpp  CalcDefPolars.h  ClOffset.h  Clause.h  ClauseAllocator.cpp  ClauseAllocator.h  ClauseCleaner.cpp  ClauseCleaner.h  ClauseOffset.h  ClauseVivifier.cpp  ClauseVivifier.h  CompleteDetachReattacher.cpp  CompleteDetachReattacher.h  DataSync.cpp  DataSync.h  DimacsParser.cpp  DimacsParser.h  DoublePackedRow.h  FailedLitSearcher.cpp  FailedLitSearcher.h  FindUndef.cpp  FindUndef.h  GateFinder.cpp  GateFinder.h  Gaussian.cpp  Gaussian.h  GaussianConfig.h  GitSHA1.cpp.in  Heap.h  ImplCache.cpp  ImplCache.h  Main.cpp  (+145 more)
cryptominisat3/: CMakeLists.txt  avgcalc.h  boundedqueue.h  calcdefpolars.cpp  calcdefpolars.h  clause.cpp  clause.h  clauseallocator.cpp  clauseallocator.h  clausecleaner.cpp  clausecleaner.h  clausevivifier.cpp  clausevivifier.h  cnf.cpp  cnf.h  compfinder.cpp  compfinder.h  comphandler.cpp  comphandler.h  completedetachreattacher.cpp  completedetachreattacher.h  constants.h  cryptominisat.cpp  cryptominisat.h  cset.h  dimacsparser.cpp  dimacsparser.h  drup.h  gatefinder.cpp  gatefinder.h  heap.h  hyperengine.cpp  implcache.cpp  implcache.h  main.cpp  main.h  mysqlstats.cpp  mysqlstats.h  packedrow.cpp  packedrow.h  (+41 more)
cryptominisat4/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  MersenneTwister.h  Vec.h  alg.h  avgcalc.h  bitarray.h  boundedqueue.h  bva.cpp  bva.h  calcdefpolars.cpp  calcdefpolars.h  clabstraction.h  clause.cpp  clause.h  clauseallocator.cpp  clauseallocator.h  clausecleaner.cpp  clausecleaner.h  clausedumper.cpp  clausedumper.h  clauseusagestats.cpp  clauseusagestats.h  cleaningstats.cpp  cleaningstats.h  cnf.cpp  cnf.h  compfinder.cpp  compfinder.h  comphandler.cpp  comphandler.h  completedetachreattacher.cpp  completedetachreattacher.h  constants.h  cryptominisat.cpp  cryptominisat.h  cset.h  datasync.cpp  datasync.h  (+96 more)
dsharp/: CMakeLists.txt
dsharp/dnnf2cnf/: CMakeLists.txt  dnnf2cnf.cpp  dnnf2cnf.hpp  main.cpp
dsharp/shared/: RealNumberTypes.cpp  RealNumberTypes.h  SomeTime.cpp  SomeTime.h
dsharp/src_sharpSAT/: Basics.cpp  Basics.h  Basics.h.bdg  main.cpp
m4ri/: AUTHORS  CMakeLists.txt  COPYING  INSTALL  README  config.h.in
m4ri/src/: Doxyfile  brilliantrussian.c  brilliantrussian.h  echelonform.c  echelonform.h  grayflex.c  grayflex.h  m4ri.h  misc.c  misc.h  packedmatrix.c  packedmatrix.h  parity.h  permutation.c  permutation.h  pls.c  pls.h  pls_mmpf.c  pls_mmpf.h  solve.c  solve.h  strassen.c  strassen.h  trsm.c  trsm.h  xor.h
python/: CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  pycryptosat.cpp  setup.py  setup.py.in  test_pycryptosat.py
python/bindings/: pycryptosat.cpp
python/src/: GitSHA1.cpp  GitSHA1.h  clause.h  clauseallocator.h  clausecleaner.cpp  cleaningstats.h  completedetachreattacher.h  constants.h  cryptominisat_c.cpp  dimacsparser.h  distillerlongwithimpl.cpp  features_calc.cpp  features_calc.h  heap.h  (+34 more)
rust/: Cargo.toml  LICENSE  README.markdown  build.rs
src/: .color_coded  .kdev_include_paths  CMakeLists.txt  EGaussian.cpp  EGaussian.h  GitSHA1.cpp.in  GitSHA1.h  MersenneTwister.h  UniFunctions.cpp  UniFunctions.h  Vec.h  XAlloc.h  alg.h  all_predictors.h  avgcalc.h  backbone.cpp  backbonesimpl.cpp  backbonesimpl.h  bitarray.h  bnn.h  boundedqueue.h  buildfuzz.sh  bva.cpp  bva.h  calcdefpolars.cpp  cardfinder.cpp  cardfinder.h  ccnr.cpp  ccnr.h  ccnr_cms.cpp  ccnr_cms.h  ccnr_mersenne.h  ccnr_oracle.cpp  ccnr_oracle.h  ccnr_oracle_pre.cpp  ccnr_oracle_pre.h  cdclt.py  cl_predictors.cpp  cl_predictors.h  cl_predictors_abs.cpp  (+233 more)
tests/: CMakeLists.txt  Makefile.am  __init__.py  assump_test.cpp  basic_test.cpp  c_test.c  cardfinder_test.cpp  clause_alloc_test.cpp  clause_cleaner_test.cpp  clause_test.cpp  comp_find_test.cpp  comphandler_test.cpp  definability_test.cpp  distill_klee.cpp  distill_long_with_implicit_test.cpp  distill_with_bin_test.cpp  distill_with_implicit_test.cpp  distiller_all_with_all_test.cpp  distiller_test.cpp  dump_test.cpp  gate_test.cpp  gatefinder_test.cpp  gauss_test.cpp  heap_test.cpp  implied_by_test.cpp  intree_test.cpp  ipasir_example.c  ipasir_test.cpp  library_speed_test.cpp  lucky_test.cpp  matrixfinder_test.cpp  ml_perf_test.cpp  multisol_test.cpp  output  probe_test.cpp  prop_by_test.cpp  readme_test.cpp  regression_test.py  scc_test.cpp  searcher_test.cpp  (+11 more)
(+656 files in other folders)
